Fix calibration tutorial images on mobile (invalid path when running in device)

--- a/www/css/wizard.portrait.css
+++ b/www/css/wizard.portrait.css
@@ -39,3 +39,21 @@
     padding: 2% 2%;
     color: rgba(255,255,255,0.7);
 }
+
+.calibration-help-step-1 {
+    background: #3b3d62 url(../images/cal_step_1.png) no-repeat center center;
+    background-size: contain;
+    height: 40vh;
+}
+
+.calibration-help-step-2 {
+    background: #3b3d62 url(../images/cal_step_2.png) no-repeat center center;
+    background-size: contain;
+    height: 40vh;
+}
+
+.calibration-help-step-3 {
+    background: #3b3d62 url(../images/cal_step_2.png) no-repeat center center;
+    background-size: contain;
+    height: 40vh;
+}
